# Proyecto-Sudoku-Paralelo

./: README.md
Proyecto Sudoku Computación paralela y distribuida/: CMakeLists.txt
Proyecto Sudoku Computación paralela y distribuida/Proyecto/: Auxiliares.cpp  Auxiliares.h  CMakeLists.txt  JsonClass.cpp  JsonClass.h  Proyecto.cpp  Proyecto.h  SudokuClass.cpp  SudokuClass.h  Sudoku_secuencial.cpp  sudoku_16x16.json  sudoku_25x25.json  sudoku_9x9.json
